ARN no overlap fix

--- a/blocks/form/styles.css
+++ b/blocks/form/styles.css
@@ -641,6 +641,8 @@ main .form .field-resultpanel {
   
     .field-successresulttextlabel { margin-bottom: 12px; }
     .field-arnrefnumpanel::before { left: 24%; }
+    .field-arnrefnumpanel { margin-left: -25px; }
+    .field-newarnnumber, .field-newarnnumber p { line-height: 45px; }
     .field-arnrefnumlabel, .field-newarnnumber { left: 36%; }
     .field-ratingpanel .field-rating .rating.hover {margin-top: 0 !important;}
 
